# awesome-fastapi-projects

./: .gitignore  .gitlint  .node-version  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  app.py  db.sqlite3  dependencies_index.json  dependency.md  env  generate_table.py  index.json  packages.db  pyproject.toml  repos_index.json  requirements.txt  results.json  setup.cfg  setup.py  update_all.sh
.github/workflows/: app.yaml  frontend.yaml  linters.yaml  scraping.yaml  web.yaml
app/: __init__.py  conftest.py  create_index.py  database.py  dependencies.py  factories.py  index.py  main.py  models.py  scrape.py  settings.py  types.py  uow.py  workflow.py
app/api/: api_v1.py
app/api/v1/: pipeline.py  repositories.py
app/scraper/: client.py  factories.py  mapper.py  models.py
app/scraper/tests/: test_client.py  test_mapper.py
app/source_graph/: __init__.py  client.py  factories.py  mapper.py  models.py  scrape.py
app/source_graph/tests/: __init__.py  test_client.py  test_mapper.py
app/tests/: __init__.py  test_database.py
data/: db.sqlite
fastapi_projects/: __main__.py  clone.py  database.py  files.py  find.py  flow.py  logger.py  models.py  packages.py  save.py  utils.py
frontend/: .env  .prettierignore  .prettierrc  components.json  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: columns.tsx  data-table.tsx  dependencies-search-provider.tsx  globals.css  layout.tsx  page.tsx  query-params-manager-provider.tsx  repos-search-provider.tsx  repos-table.tsx  search-form.tsx  search-provider.tsx
frontend/src/components/ui/: dialog.tsx  icons.tsx  multiselect.tsx
frontend/src/lib/: hooks.ts  indexes.ts  load-index-server-only.ts  query-params.ts  repos-index.ts  schemas.ts  search.ts  utils.ts
migrations/: env.py
migrations/versions/: 0232d84a5aea_create_repo_dependency_and_.py  7ee6dc0ae743_add_repo_dependency_and_repodependency_.py  90eb9d1f9267_set_up_the_database.py  a48ca845cfe5_first_commit.py  ac7c35039d70_add_a_last_checked_revision_column.py  d8fc955c639b_add_repo_dependency_and_repodependency_.py
populate/: database.py  exceptions.py  logger.py  main.py  models.py  query.py
requirements/: base.txt  dev.txt  test.txt
scripts/: clone_all.py  delete_duplicates.py  extract.py  list_imports.sh  query.py  unique_imports.py
web/: Makefile  pyproject.toml
web/requirements/: base.txt
