[project]
name = "awesome-fastapi-projects"
version = "0.1.0"
description = "A web app built with FastAPI to index awesome projects built with FastAPI."
authors = [
    {name = "Vladyslav Fedoriuk", email="vlad.fedoriuk2000@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiosqlite",
    "alembic",
    "fastapi[all]",
    "httpx-sse",
    "sqlalchemy[asyncio]",
    "stamina",
]
[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "isort",
    "pip-tools",
    "pre-commit",
    "pyproject-fmt",
    "pyupgrade",
    "ruff",
]
test = [
    "dirty-equals",
    "polyfactory",
    "pytest",
    "pytest-anyio",
    "pytest-cov",
    "pytest-mock",
]

[tool.setuptools]
py-modules = ["app"]

[tool.black]
line-length = 88
target_version = ['py311']
include = '\.pyi?$'
force-exclude = '''
(
  /(
     \.bzr
    | \.direnv
    | \.eggs
    | \.git
    | \.git-rewrite
    | \.hg
    | \.mypy_cache
    | \.ruff_cache
    | \.tox
    | \.nox
    | \.pants.d
    | \.pytype
    | \.venv
    | \.svn
    | \.ipynb_checkpoints
    | \.egg-info
    | __pypackages__
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | venv
  )/
)
''' # To comply with ruff config

[tool.ruff]
line-length = 88
target-version = 'py311'
required-version = "0.0.280"
extend-select = [
    "D", # pydocstyle
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "ANN", # flake8-annotations
    "S", # flake8-bandit
    "C", # flake8-comprehensions
    "T", # flake8-debugger
    "INP", # flake8-no-pep420
    "ERA", # eradicate
    "PD", # pandas-vet
    "NPY", # numpy-specific rules
    "Q", # flake8-quotes
]
[tool.ruff.per-file-ignores]
# Ignore missing docstrings in migrations and alembic files
"**/migrations/*.py" = ["D"]
"**/migrations/env.py" = ["ERA001"]
"**/tests/*.py" = ["S101"]
"**/conftest.py" = ["S101"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.isort]
profile = "black"
line_length = 88
