[metadata]
name = fastapi-projects
version = 0.0.1
description = Query FastAPI projects.
long_description = file: README.md
long_description_content_type = text/markdown
author = Marcelo Trylesinski
author_email = marcelotryle@gmail.com
url = https://github.com/Kludex/awesome-fastapi-projects
project_urls =
    Changelog = https://github.com/Kludex/awesome-fastapi-projects/blob/main/CHANGELOG.md
    Twitter = https://twitter.com/marcelotryle
license = MIT
keywords = fastapi, projects
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE

[options]
packages =
    fastapi_projects
include_package_data = True
install_requires =
    typer==0.4.0
python_requires = >=3.7
zip_safe = False
